Draft updates for Feb-Mar 2020.

--- a/pnsac/newsletter/article_ContactInfo.tex
+++ b/pnsac/newsletter/article_ContactInfo.tex
@@ -31,17 +31,20 @@
 Director, President\\
 \email{president@projectnorthstar.ca}}
 
-\address{Neil Raynor\\
-Director, Vice President}\\
-
 \address{Garry Dupont\\
-Director}\\
+Director, Vice President}\\
 
 \address{Roger Button\\
 Director, Corporate Secretary, NStar Chronicle Editor}\\
 
 \address{Phil Chrysler\\
 Director, Merchandise}\\
+
+\address{Chris McGuffin\\
+Director, Social Media}\\
+
+\address{Drew Hodge\\
+Director, Website}\\
 
 
 
@@ -74,17 +77,14 @@ Treasurer\\
 %\end{minipage}
 
 
-
-
-\subsection{Newsletter\protect\footnotetext{This newsletter is typeset using
+\subsection{NStar Chronicle\protect\footnotetext{This newsletter is typeset using
     \LaTeX.  The style package used for the newsletter (PNSAC.sty) is
     a modification of GRASSnews.sty belonging to the Geographic
     Analysis Resources Support System (GRASS). The modification was
     made possible by kind permission of the Editor-in-Chief of
     GRASS-News.}}
 
-\small\address{Editor: Roger Button\\
-\small\email{editor@projectnorthstar.ca}}
+\small\address{Editor: Roger Button}
 
 \address{Typesetter: Drew Hodge}
 
@@ -126,7 +126,7 @@ K1K 4P8}\\
 	General enquiries:\email{info@projectnorthstar.ca}}
 
 %\scriptsize\address{Web site:
-{\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}\\
+%{\normalfont\color{blue}\texttt{\url{http://www.projectnorthstar.ca}}}\\
 
 
 
