--- a/pnsac/newsletter/article_EditorsNotes.tex
+++ b/pnsac/newsletter/article_EditorsNotes.tex
@@ -16,50 +16,25 @@
 
 \vspace{12pt}
 
-In this issue we are recognizing the 70th anniversary of a very special event
-in Canadian aviation history and one which involved a North Star aircraft. The
-first non-stop transcontinental flight took place on January 15, 1949 and
-readers will find an article dealing with that event in this issue. In
-addition, your Association, in partnership with the Canadian Aviation and Space
-Museum will be holding a members meeting, and a public viewing of the North
-Star on January 19, 2019 to mark this event.
+Putting out this edition of the Chronicle has been an example of great
+co-operation from members and non-members alike. Thanks are owed to a
+number of people. Our member Gary Whitten was instrumental in getting
+the necessary permission from Air Force Magazine to publish the
+"Diversion to Alert" article.  Allan Bowes, another member, suggested
+that we should try to get the "Civil Merlins" article into an edition
+of the Chronicle.  Following his suggestion we contacted Ben Dunnell,
+the editor of Aeroplane Magazine. Through Ben's offices we were able to
+secure permission to reprint this article.  The "Civil Merlins" was
+part of a comprehensive 17 page Aeroplane Database article on the
+Merlin. If any members wish to read the entire article it was published
+in the July 2017 issue.
 
-We are also recognizing another one of our long standing members in this
-issue. Ted Devey has been active in our organization since the very early
-days. We are indeed fortunate that we have a number of other members who have
-been with us since the beginning. In 2003 the Ottawa Citizen predicted "a
-bright future" for our nascent organization. A copy of the Citizen article is
-included in this issue. Not surprisingly, given the challenges involved in
-making this project work, the "future" did not always appear as "bright" as
-Polaris. However, our ever optimistic President reports that 2018 was
-characterized by positive developments in the Project, and our Association's
-relationship with CASM.
-
-The Museum's conservator, in the "Conservator's Corner" has contributed a
-thoughtful article based on the classic 70's book, \textit{Zen and the Art of
-Motorcycle Maintenance} which I am sure
-that our readers will enjoy. Good
-reading.
-
-
-%Our Association was incorporated in 2003. We are fortunate that a
-%number of the original members of the organization, such as Tim
-%Timmins, are still involved as they can provide an historical
-%perspective. As Tim says, in the article "Our Members," there have been
-%many bumps in the road, and the fact that the aircraft is still a long
-%way from completion after 16 years speaks for itself. In January 2017,
-%R\'{e}jean (Rej) Demers took up his position as CASM's Conservation Project
-%Manager. Rej's first contribution to the Chronicle can be found in the
-%"Conservator's Corner." The restoration of the North Star is a priority
-%for Rej. He has spent the first year of his mandate gathering
-%information and developing systems and procedures which will, in the
-%long run, move the restoration of the aircraft forward in a coherent
-%manner. I have previously stated the obvious and that is the health and
-%vigour of the Association is dependent on the restoration status of the
-%aircraft. In the last few years there have been as many bumps in the
-%road as there are potholes in Ottawa in the spring. The President is
-%very optimistic we have reached a real turning point (see the
-%"President's Notes") and wouldn't that be great.
+In addition thanks go out to the other contributors, namely Richard
+Lodge, Garry Dupont,  Neil Raynor and Bruce Gemmill. Bruce took the
+lead in putting together the Progress Report.  Finally, I would like to
+thank Drew Hodge our stalwart publisher of this edition. We are always
+on the lookout for content for the Chronicle so please do not hesitate
+to bring forward any ideas that you might have. Enjoy.
 
 \vspace{12pt}
 
