--- a/pnsac/newsletter/article_Feature2.tex
+++ b/pnsac/newsletter/article_Feature2.tex
@@ -3,48 +3,71 @@
 
 % Head
 
-\title{Volunteers Needed} \author{Richard Lodge}
-
+\title{The Civil Merlin} 
+\author{Dr. Jakob Whitfield}
 \maketitle
 
-The Project North Star Association has two types of volunteers. The
-first are known as Restoration volunteers and they are the group who
-get their hands dirty and physically work on the restoration of the
-aeroplane. The other group are known as Association volunteers and
-they work in other very important areas of our Association.
+\textit{The following article is an extract from a larger piece which appeared
+in the July 2017 edition of Aeroplane magazine under the heading
+"Rolls-Royce Merlin."  We wish to thank Allan Bowes for bringing it to
+our attention. This article is republished with the kind permission of
+the publishers of the magazine and the author Dr. Jakob Whitfield.}\\
 
-At present we are not looking for any more Restoration volunteers but
-we do have a need for some Association volunteers. In particular we
-are looking for a Social Events Coordinator and a Merchandise Manager
-and volunteers who would work with those officers.  These volunteer
-posts have become open because the existing volunteers have held the
-positions for some years and in each case have decided that it is time
-to pursue other interests within the Association.
 
-Below are brief details of the requirements for each volunteer
-position. By volunteering for one of these functions, a volunteer will
-become more involved with Association activities and will enjoy the
-comradeship and rewards of working with a very interesting group of
-people who have many diverse life experiences.
+The earliest Merlins to operate in a civil mode were the Merlin T24
+series, developed in 1944. These were single-stage twin-speed units
+similar to the Merlin 24s fitted to the RAF's Lancasters, but were
+modified to improve service life, and were fitted to Transport
+Command's Avro Yorks. Long-range transport operation entailed running
+at relatively low cruise powers for long periods — under these
+conditions the lower cylinder head temperatures caused deposits of lead
+oxide from the fuel, resulting in excessive spark plug fouling. To
+counter this, the Merlin T24/4 incorporated a charge heater to increase
+the inlet temperature. Post-war, the Merlin 500 series essentially
+comprised civil and export versions of the T24, incorporating its
+modifications, though only the Merlin 501 included a charge heater.
 
-The Social Events Coordinator is the person responsible within the
-Association for overseeing and organizing events for
-members. Typically, he or she would, with the assistance of others,
-organize the Members Meetings which are mostly held every three months
-and such other events as he or she might agree to run as approved by
-the Board of Directors.
+The 600 and 700-series engines were two-speed two-stage engines, based
+on the military 100-series. They were fitted with the so-called
+'transport heads and banks', strengthened for greater reliability. Most
+marks had some form of variable intercooling to allow for charge
+heating to reduce plug fouling under cruise conditions. Initially the
+system was plagued by coolant leaks, but as experience showed that zero
+intercooling at cruise allowed enough charge heating to reduce leading,
+a simple stop valve was fitted to the system. This allowed full
+intercooling for take-off and climb, which could then be turned off for
+cruise.
 
-The Merchandise Manager is responsible for managing the Association's
-stock of merchandise for sale, setting the ordering levels as agreed
-with the Board of Directors, placing orders for new stock and ensuring
-that sales and inventory levels are properly reported to the
-Treasurer. Other volunteers assist the Merchandise Manager in the
-work.
+Civil Merlins were fitted to Avro Lancastrians, Yorks and Tudors, but
+their flagship role was on the Canadair DC-4M North Star, a Douglas
+DC-4-derived design intended for Trans-Canada Air Lines (TCA). The
+North Stars used a modified Universal Power Plant installation, as the
+DC-4's nacelle bulkheads were slightly larger than the SBAC standard.
+In practice it turned out the Merlins were not ideally suited for use
+in civil operations: though the North Stars flew higher and faster than
+DC-4s, their time between engine overhauls was around 850 hours,
+roughly a third of that of commercial US radial engines. The engines
+also produced a lot of cabin noise, though this was alleviated somewhat
+by revised 'cross-over' exhausts that ducted the cabin-side stacks
+outboard, developed first by TCA and then by Rolls-Royce themselves.
 
-If any of our members are interested in taking over one of these
-positions or working with these officers or know of a non-member who
-would be interested, please would he or she contact me by email at
-\email{info@projectnorthstar.ca} or by phone on (613) 612-4920.
+The extra running costs were mostly borne by Rolls-Royce. When TCA's
+managing director expressed dissatisfaction with the Merlin's
+commercial performance, Hives asked what a reasonable level of
+maintenance cost would be. Being told \$4 per engine hour, he agreed to
+service the fleet's engines for this amount. This early form of 'power
+by the hour' was initially expensive for Rolls-Royce, but by the end of
+the Merlin's life the company had learned enough to supposedly make a
+small profit at this level.
+
+What was undoubtedly true was that Rolls-Royce learned a great deal
+about the harsh realities of commercial operation in a short time.
+Hives is supposed to have said to TCA, "We didn't know the Merlin until
+you started operating it!" In the longer term, this paid off,
+TCA---later Air Canada---selecting Rolls--Royce engines for its future
+fleet: Darts in Viscounts, Tynes in Vanguards, Conways in DC-8s, and
+RB211s in TriStars.
+
 
 \begin{footnotesize} \raggedleft PNSAC\\
 \end{footnotesize}
