--- a/pnsac/newsletter/article_Feature3.tex
+++ b/pnsac/newsletter/article_Feature3.tex
@@ -4,40 +4,127 @@
 
 % Head
 
-\title{The Whispering Giant}
-\author{Dave Lambeth}
+\title{A Personal Journey in Support of Homeless Veterans in Canada}
+\author{Neil Raynor}
 
 \maketitle
 
-\begin{centering}
-Twinkle, twinkle, old North Star,\\
-With wrinkled skin and creaky
-spar,\\
-For years you've always been on
-sked,\\
-As many of our force you've sped\\
-to distant lands beyond the skies,\\
-you've never failed to see the rise\\
-of distant suns or moonrise glare.\\
-You've carried us with tender care\\
--- back you came to take us home,\\
-from old Japan or France or Rome\\
-from England, Goose, and Kef.\\
-We cannot hear you.\\
-('cause we're deaf)\\
-\end{centering}
+Veterans' House: the Andy Carswell Building is Canada's first "Housing
+First" community built for homeless Veterans. This pioneering project
+specifically targets the needs of the rising number of Veterans who are
+"living rough" in Canada and combines safe housing with essential
+on-site rehabilitation and wrap around support services.
 
-\begin{figure}[htbp]
-   \vspace{2em}
-   \centering
-   %name of the graphic, without the path AND in EPS format:
-   \includegraphics[scale=0.5]{jim_jung_2.eps}
-   %caption of the figure 
-   \caption*{\small \em A Whispering Giant (North Star 17515) at
-     Resolute Bay NWT in about 1963, taken by Radio Operator Jim Jung.}
-   %label of the figure, which has to correspond to \ref{}:
-   \label{fig:jim_jung}
-\end{figure}
+
+Who knew? How could we? Surely if we knew we'd have done something
+about it?
+
+Fact: every night in Ottawa between 50 and 85 Veterans are sleeping on
+the streets, in the parks or under bridges in Ottawa. How could that be
+happening in the 21st Century in a G7 capital?
+
+Seven years ago a group of people came together within the Multifaith
+Housing Initiative (MHI) to do something about that stat. MHI is a
+federally registered charity based in Ottawa which provides affordable
+housing: currently it has about 140 units with 400 residents scattered
+across the city. What started as a desire to provide affordable housing
+has morphed into an ethos to build communities – Veterans' House is the
+latest iteration of that approach.
+
+What MHI and its volunteer members did was: articulate the need to
+address the issue of homelessness among Veterans; identify the need for
+support for these Veterans that went beyond just housing; and together
+with its partners develop a solution that wraps it all within a
+military community initiative.
+
+The physical manifestation of MHI's work is the structure being raised
+on the former CFB Rockcliffe airbase called Veterans' House: the Andy
+Carswell Building, a 40-unit community apartment building named for a
+retired WWII RCAF Lancaster pilot who was shot down over Germany in
+1943 and who remained a POW until liberated by allied troops in 1945.
+
+Uniquely, this "Housing First" initiative will include provision for a
+range of on-site support services focused on the individual needs of
+the residents and provided by MHI's partner organizations who are
+professionals in their fields of work. And being "Housing First" means
+that residents can remain in Veterans' House for an indeterminate
+period and focus on recovery from the underlying issues that
+contributed to their homelessness, be they economic, health, mental
+health or addiction related issues. Moreover, in line with best
+practices in providing affordable housing to this at-risk group, all
+the ground floor bachelor apartments in Veterans' House will be fully
+wheelchair accessible. Again, with a community spirit in mind, the site
+will also include a gym, gardens, service-dog park, and communal
+kitchen and BBQ area for when residents want to share meals together.
+
+Together with our partners – many of them with direct connections to
+the military and Veterans – Veterans' House: the Andy Carswell Building
+will provide a "military-family" structure to residents which they will
+recognize and which research has shown many homeless Veterans miss and
+which contributes to their slide into homelessness. A fully list of our
+partners, progress to date and lots of other information is on the MHI
+Veterans' House website at
+{\normalfont\color{blue}\texttt{\url{https://www.multifaithhousing.ca/veterans-house}}}
+
+
+The physical structure is rising from the ground this spring. We broke
+ground on September 5th, 2019 and 96-year old Squadron Leader (retd)
+Andy Carswell laid the cornerstone on September 16th. As at February
+1st, 2020 we are up to the second floor with completion planned for
+November 2020. There's lots to do but to date we are pretty much on
+schedule despite building through the winter months.
+
+The total cost of the initiative is about \$15.4 million, including \$3
+million for the land which was transferred from the federal government
+as part of its contribution. There is a balance of \$2.3 million still
+left to raise and we are in full fund-raising mode. If you are willing
+and able there are a number of ways you can help financially: you can
+send a cash or stock-transfer donations to Veterans' House through MHI;
+organize a fund-raising event within your community; or leave a bequest
+in your Will. All donations are gratefully received and will be put to
+good use where they will make a difference.
+
+While Veterans' House: the Andy Carswell Building is the first of its
+kind our plan is to create a robust model that can be replicated across
+Canada to address the national issue of homeless Veterans.
+
+For more general info about Multifaith Housing or to make a donation go
+to: www.multifaithhousing.ca You'll find more information there
+including a recently released report on a 2019 Survey of homeless
+Veterans in the National Capital Region.
+
+To volunteer you can apply online. Go to:
+{\normalfont\color{blue}\texttt{\url{https://www.multifaithhousing.ca/volunteer}}}
+
+%\begin{centering}
+%Twinkle, twinkle, old North Star,\\
+%With wrinkled skin and creaky
+%spar,\\
+%For years you've always been on
+%sked,\\
+%As many of our force you've sped\\
+%to distant lands beyond the skies,\\
+%you've never failed to see the rise\\
+%of distant suns or moonrise glare.\\
+%You've carried us with tender care\\
+%-- back you came to take us home,\\
+%from old Japan or France or Rome\\
+%from England, Goose, and Kef.\\
+%We cannot hear you.\\
+%('cause we're deaf)\\
+%\end{centering}
+
+%\begin{figure}[htbp]
+%   \vspace{2em}
+%   \centering
+%   %name of the graphic, without the path AND in EPS format:
+%   \includegraphics[scale=0.5]{jim_jung_2.eps}
+%   %caption of the figure 
+%   \caption*{\small \em A Whispering Giant (North Star 17515) at
+%     Resolute Bay NWT in about 1963, taken by Radio Operator Jim Jung.}
+%   %label of the figure, which has to correspond to \ref{}:
+%   \label{fig:jim_jung}
+%\end{figure}
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
