--- a/pnsac/newsletter/article_ForthEvents.tex
+++ b/pnsac/newsletter/article_ForthEvents.tex
@@ -13,16 +13,12 @@
 %June 5, 2014     \hspace{50mm}\= Board of Directors' Meeting\\
 %{\normalfont\color{red}May 02, 2015}   \hspace{50mm}\= 
 %{\normalfont\color{red}Members' Quarterly Meeting}\\
-\textbf{Saturday, January 19, 2019}   \hspace{48mm}\=  Members Meeting \& 70th
-anniversary events\\
+\textbf{Saturday and Sunday, June 6, 7, 2020}   \hspace{34mm}\=  Doors Open Ottawa\\ 
 %  Add blank line
  \> \\
-\textbf{Saturday, April 13, 2019}   \hspace{52mm}\=  Annual General Meeting\\ 
+\textbf{Sunday, June 20, 2020}   \hspace{58mm}\=  Annual General Meeting\\
  \> \\
-\textbf{Sunday, June 1, 2, 2019}   \hspace{54mm}\=  Doors Open Ottawa
-(Tentative Event)\\ 
- \> \\
-\textbf{Monday, July 1, 2019}   \hspace{58mm}\=  Canada Day\\ 
+\textbf{Wednesday, July 1, 2020}   \hspace{55mm}\=  Canada Day\\ 
 %\textbf{Saturday, May 6, 2017}   \hspace{50mm}\=  \\ 
 \end{tabbing}
 %\vspace{-5mm}
