--- a/pnsac/newsletter/article_MemberInterview.tex
+++ b/pnsac/newsletter/article_MemberInterview.tex
@@ -5,7 +5,7 @@
 % Head
 
 \title{Our Members}
-\author{Interview with Ted Devey}
+\author{Interview with Garry Dupont}
 
 \maketitle
 
@@ -24,26 +24,24 @@
 
 1.\textit{What is your background in aviation?}
 
-My service background was naval. Professionally I was an electrical engineer
-with the Department of Communications specializing in radio spectrum
-engineering. After retirement in 1989 I sought activities that interested me
-such as helping to install a pipe organ in a theatre in Renfrew, working on
-restoring a sailing yacht, which unfortunately stopped due to lack of money. I
-also took courses in welding, machine shop and woodworking at Algonquin College
-to enhance my manual skills. 
+I graduated from the Confederation College Aircraft Maintenance course
+in the Spring of 1975. After returning to my home town in the Red Lake
+District I gained employment with Red Lake Seaplane Service. After
+completing the course I had to apprentice for 18 months before writing
+the final exam for my Aircraft Maintenance Engineers' License. I
+successfully wrote my final exam in December 1976 and obtained my AME
+certification. In February 1977 I was hired by Perimeter Aviation in
+Winnipeg Manitoba. There I obtained my Turbine Engine and
+Pressurization Aircraft endorsements.  I started my 30 year career with
+the RCMP Air Services Branch in February 1981. My career took me to
+Edmonton Alberta, Goose Bay Labrador, Winnipeg Manitoba then finally to
+Ottawa. I finished my career as Quality Assurance Manager.
 
 2. \textit{How long have you been involved with Project North Star and how and
 why did you get involved?}
 
-I attended a public meeting in the Museum in 2003 in which it was indicated
-that efforts were being made to restore the Museum's North Star to a showroom
-condition. In 2004 the project finally was approved and work started.
-Professional work had to be carried out to remove asbestos and many dead birds
-and their mess. At first I used my welding skills in adapting steps/platforms
-for working on engines on the aircraft. In winter, seats were removed from the
-cockpit and brought into the shop where they were dismantled, treated and
-cleaned, painted and finally spray painted. I found the work interesting and
-satisfying and so I was hooked into the project.
+I attended the very first meeting held for Project North Star. This was
+at my wife's suggestion that it would be a good retirement pastime.
 
 %\begin{figure}[htbp]
 %   \vspace{2em}
@@ -58,15 +56,11 @@ satisfying and so I was hooked into the project.
 
 3. \textit{What has been the history of your involvement to date?}
 
-In 2006 I expressed interest in the work on the four Roll-Royce Merlin engines.
-As it turned out I was asked if I would take on the job of Merlin Crew Chief
-and agreed with the proviso that I would turn the task over if someone came
-along who was properly qualified. When Garry Dupont retired from the RCMP as
-head AME at the RCMP Hangar at Uplands, I offered the position to him which he
-took over. From 2006 until the summer 2018 I did only engine work on the four
-engines. Unfortunately my limited mobility prevented me from helping with the
-more recent work that was being done behind the firewall of \#4 engine. So I
-went into the Conservation shop to start doing different work.
+While I was employed I worked an evening shift every 4 weeks so I would
+come in to CASM in the morning for a few hours. Upon my retirement Mike
+Irving had me work in the engine shop, which I have been doing since my
+retirement. I also have been on the board of directors for a number of
+years.
 
 
 %\begin{figure}[htbp]
@@ -93,26 +87,9 @@ went into the Conservation shop to start doing different work.
 
 4. \textit{What has been the highlight of your involvement?}
 
-I think that the highlight of my involvement was back in 2006. To work on the
-engines we needed two engine stands, one to transfer the entire engine assembly
-from the aircraft for dismantling to the core engine and a second stand to
-mount the core engine and further dismantle it to bare components. This had to
-be a rotary affair so that the engine could be positioned for whatever
-operation was being done. The first stand had to be designed and built from
-scratch. The design was an adaptation of the engine stand located next to the
-Lancaster bomber on the Museum floor with ample room for a person to work
-underneath. A specification was drawn up for the various pieces of steel to be
-cut precisely by the steel supplier and to be delivered to the RCMP Hangar at
-Uplands, as instructed by Garry Dupont. On a Saturday a group of volunteers
-assembled at the RCMP Hangar and assembled the horizontal and vertical sections
-of the stand with Garry doing the welding. Following this the stand was
-delivered to the Museum's welding shop for final assembly, then into the main
-shop where it was finally assembled and painted. Everything fit as intended.
-
-The rotary stand was located in the storage area of the Science and Tech
-Museum. The base was extended to the required length and a new frame was built
-to hold the core engine. That everything fit together so well from the start
-was the highlight of the project for me.
+The biggest highlight for me was installing number 2 engine. It was
+about half completed when I started in the engine shop. This is the
+largest engine I have ever installed in my entire career.
 
 %\begin{figure}[htbp]
 %   \vspace{2em}
@@ -127,23 +104,15 @@ was the highlight of the project for me.
 
 5. \textit{What has been the most challenging part of your involvement?}
 
-The most challenging part of the job was working on engine \#1, the port outer.
-Since I was not a mechanic, I had to plan the disassembly of the engine and
-carry it out with the help of crew members under the strict guidance of the
-then Shop Supervisor Mike Irvin. He was a hard taskmaster. This was not an
-engine that had just been removed from an operating aircraft for overhaul. The
-North Star and its engines had been left out in the Great Canadian outdoors for
-39 years without any attempt at protection from the four seasons of weather
-during those years. Corrosion was rampant. In each of the twelve cylinders the
-piston rings were rusted to the cylinder liners. Many hours of soaking the
-pistons with Liquid Wrench, the use of compressed air and other techniques had
-to be employed to remove the pistons from the cylinders. There were other
-issues too that made the overall disassembly of the engine very difficult. The
-foregoing applied to each of the other three engines, so it has taken about 12
-years to process the four Merlins to a preserved non-running condition. The
-first engine I found the most challenging as we had to learn as we went along.
-The remaining engines were very difficult but the experience gained with \#1
-engine was valuable in restoring the others.
+One of the most challenging parts was learning how the engine worked
+with all its systems. I found a RCAF training manual in the office and
+took it home. Over several months of reading I started to understand
+what made this monster of old technology tick. Another challenge was
+learning the British Hardware system and tools. A further challenge was
+reading  the old manuals which were written before they were
+standardized by the ATA chapter system which all aircraft manuals
+follow today. Learning the art of conservation was also a  challenge
+but was made easier by the guidance of Mike Irving.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
