--- a/pnsac/newsletter/article_PresReport.tex
+++ b/pnsac/newsletter/article_PresReport.tex
@@ -10,83 +10,67 @@
 
 \maketitle
 
-It is always interesting to look back on what was written in previous issues of
-any journal. The NStar Chronicle is no exception and so before starting to
-write this piece I reread what I had said during the year 2018. For once luck
-was with me and as far as I can see I did not write anything that was either
-untrue or not achieved during the year.
+Since the last issue of the NStar Chronicle we have taken part in the
+70th Anniversary celebrations of the first non-stop transcontinental
+flight across Canada which was flown by a North Star. We partnered with
+the Museum for this event and were very pleased to welcome
+representatives from the RCAF who joined us for the day. After the
+formal part of the celebration, when impressive plaques of the aircraft
+made by our member Chris McGuffin, had been presented to the RCAF and
+the Museum Director General, Chris Kitzan, everybody moved to the
+Reserve Hangar and the aircraft was opened to our association members,
+guests and in the afternoon to 90 members of the public who had
+pre-booked a tour. R\'{e}jean(R\'{e}j)Demers, the Museum Special Project
+Manager, guided the tours assisted by several of our members. Towards
+the end of the tour session someone in the main Museum activated the
+fire alarm. The Museum was promptly evacuated, and the public was
+recommended to go to the Reserve  Hangar until the fire issue had been
+dealt with (it turned out to be a false alarm). Quite unexpectedly R\'{e}j
+and the guides found themselves surrounded by many Museum visitors who
+had not signed up for the North Star tour. Unperturbed by this event,
+Réj and the guides welcomed the unscheduled visitors and gave them an
+impromptu tour of the aircraft. Both our treasurer and our membership
+secretary were pleased with the days' result!
 
-The last paragraph of my January 2018 Notes suggested that the year would see
-increased activity both in the aircraft restoration and within the Association.
-Both have proved correct. We have successfully recruited several new
-Restoration Volunteers and our Association activities have increased
-substantially.
+As I write this the days are getting longer and R\'{e}j is planning work to
+be done on the aircraft when it is moved outside onto the ramp in the
+spring. Each year we do work on the aircraft which cannot be done
+inside the Reserve Hangar during the winter. We also prepare the
+aircraft for display when, once again, we open the aircraft to enable
+the public to view progress made in the last year.
 
-Apart from the occasions when our members either met or have the been actively
-taking part in Museum activities we have made a major step forward in that our
-Facebook page has again become active under the stewardship of Chris McGuffin.
-Chris is a dedicated Restoration Volunteer who can frequently be seen around
-the aircraft at a considerable height complete with hardhat and safety harness.
-When he returns to the ground, he often gets out his camera and takes
-photographs, many of which are now appearing on Facebook. For those of our
-readers who are not Facebook subscribers, I encourage you to join Facebook and
-to "like" the page Project North Star. You will then see the latest updates on
-our restoration progress together with the recent photographs.
+This year we are planning two major display events. The first will be
+on the Doors Open Ottawa weekend (June 6 and 7). This is a great time
+for our members to meet the public, many of whom have an interest in
+aviation. Our second main event, on Canada Day, is enjoyable for all
+the members who sign up to be part of the team meeting the public.
+There are always large crowds, many of them family groups, If any of
+you reading this article would be interested in joining our members for
+either of these events please contact me (my co-ordinates are on the
+back page of this issue of the Chronicle)
 
-Within the next few days our webmaster, Drew Hodge, will be relaunching our
-website with an updated homepage and better links to other parts of the
-website. Much work has gone into the redesign and we look forward to receiving
-comments from users. The website is designed primarily to be a location for all
-the Association's historical and archival information. We are planning to add
-to the website more PDF versions of previous issues of the NStar Chronicle and
-photographs which are not currently available on the site. Current information
-will be sent to members by email and updates to our Facebook page.
+Shortly before Christmas a major milestone, in the  restoration of the
+North Star, was reached. Work on Merlin engine \#4 was completed and it
+was dragged on its cradle by the Museum forklift truck to the
+Restoration hangar for later mounting on the aircraft to join the other
+three restored engines. Chris McGuffin put some video clips onto our
+Facebook page of the engine being dragged through the Museum parking
+lot and into the hangar. Watch for more of our Facebook messages since
+Chris frequently posts new items.
 
-Our first big event of 2019 will be held at the Museum on Saturday, January
-19th to celebrate the 70th anniversary of the first non-stop flight across
-Canada between Vancouver and Halifax. The flight was made by a North Star on
-15th January 1949. Members have already been advised of the event by email and
-on Facebook and I hope to see many of you joining us on that day. Although this
-is a Project North Star Association event, we have received considerable help
-with planning from the staff of the Museum. This is a good example of the
-co-operative working relationship between the Association and Museum.
+In the late fall we welcomed the appointment of Erin Secord as the
+Museum's new Manager Conservation Services. She is responsible also for
+conservation of the collections at the Science and Tech Museum. Erin
+has now been able to join us at two of our Members' meetings.
 
-During the summer we expect to show off the aircraft to the public, as usual,
-on Canada Day. We will also be showing the North Star during Doors Open Ottawa
-at the beginning of June, if the Museum decides to take part in the event this
-year.
+Finally, we are now working to update the Memorandum of Understanding
+between PNSAC and the Museum.  Much has changed since the original
+agreement was signed in May 2006.
 
-During 2018 the Museum organised two very enjoyable events for volunteers.
-Invitations were given all Museum registered volunteers including North Star
-volunteers. In the summer we once again had a Bush Pilots' Breakfast at which
-the Museum staff cook a great breakfast for everyone attending (there is
-nothing so good as seeing the Director General, Chris Kitzan flipping
-pancakes). Shortly before Christmas the Museum organised a new event, a pot
-luck lunch for staff and all the Museum volunteers---another thoroughly good
-overeating occasion.
-
-One of the benefits of becoming an active member of PNSAC is for the
-comradeship with other members who all have an interest in aviation. It is not
-necessary to be a volunteer to enjoy the company of other members. Once a month
-there is an informal breakfast held in a caf\'{e} on Arch St which is relatively
-near the Ottawa General Hospital. The breakfast started about two years ago
-under the leadership of Bill Tate. Each month we chat about aviation, the North
-Star project and whatever else we feel like talking about. I usually give the
-group an update on anything of interest that has happened since the last
-breakfast. Joining this informal group is a good way to become involved with
-the Association and to possibly move on to taking a more active role in the
-Association.
-
-We will be holding our Annual General Meeting at the Museum on Saturday, April
-13. At this meeting we re-elect our Board of Directors and would welcome the
-nomination of any member who might be interested in serving on our Board. At
-present we have five members. This leaves one vacancy to bring us up to our
-normal Board number of six members.
-
-2019 is starting well. We look forward further significant milestones in the
-North Star restoration process such as rehanging of the restored Engine \#4. We
-are also hoping to arrange further events for our Association members.
-
+Our next Members' Meeting is scheduled for Saturday, June 20, 2020
+which will also be our AGM. Do reserve this date in your calendar if
+you can be in the Ottawa area on that day. The meeting will be held at
+the Canada Aviation and Space Museum. More details will follow later.
 
 \begin{footnotesize}
     \raggedleft PNSAC\\
