--- a/pnsac/newsletter/article_ProgReport.tex
+++ b/pnsac/newsletter/article_ProgReport.tex
@@ -6,83 +6,126 @@
 
 \title{Conservator's Corner}
 %\subtitle{PNS 2016 Status Update}
-\author{R\'{e}jean Demers}
-\author{Restoration Project Manager}
+\author{Bruce Gemmill, R\'{e}jean Demers, and Garry Dupont}
+%\author{Restoration Project Manager}
 
 \maketitle
 
-\section{Zen and the Art of Aircraft Restoration.}
+%\section{Zen and the Art of Aircraft Restoration.}
 
-Through my daily experience over the past two years, working with volunteers, I
-have asked myself the following question: What makes a volunteer dedicated to a
-project? The answer is not a straightforward one. This article explores the
-subject, much like Pirsig did in his book about metaphysical motorcycles; Zen
-and the Art of Motorcycle Maintenance.
+The past year was a very busy one for the North Star restoration crew. 
+In the Engine Shop, under the careful watch of Crew Chief Garry Dupont,
+members Charles Baril and Richard Lodge worked to fit the final pieces
+on engine 4 including; all the cowl frames and panels, main and
+auxiliary radiator flaps under the engine, the engine air intake duct
+and associated actuators. All the hard work in setting up sheet metal
+repairs to the cowl panels paid off.  However, fitting the large steel
+exhaust panels around the 12 exhaust stacks was particularly
+challenging. It's no longer a secret that ratchet straps and wooden
+2"x4" blocks have become part of the standard North Star tool kit.
 
-We strive for quality. As restoration work continues on the North Star, we get
-absorbed into the weight and breadth of the subject matter. This is the kind of
-project that demands the level of commitment found in monasteries, dojos and
-Paratrooper units. Commitment comes from dedication and reward. Quality is
-obtained through application of commitment, producing results which may be
-enjoyed. The following effort in writing has been made to define such elements,
-those necessary to sustain the project.
+While that work was underway, Jacques Roy, Peter Scartozzi and Charles
+Baril were busy stripping equipment, pipes, hose and cables from inside
+the nacelle where engine 4 will soon be installed.  Will Assad and Neil
+Raynor also helped with this. After equipment removal, many hours were
+spent carefully cleaning and removing oil and corrosion prior to
+painting.  In some areas a small bead blasting gun was used to remove
+rust from nuts and bolt heads that could not be taken out for cleaning.
 
-A voracious appetite for detail. Precise facts and data build foundations.
-Foundations of information that erode over time. Lost to floods, fires, or
-worst; thieves, vandals and neglect. Information is our firmament that keeps us
-grounded in our work. Daily worksheets are filled with steps taken to satisfy a
-condition. Drawings are made to translate reality to paper. These words,
-drawings and tables form hard to translate time lines. Coloured bars overtaking
-each other, running in thousand hour blocks of volunteer contributions. These
-life hours, cannot be overlooked, as a restoration project advances through the
-years.
+Most notably were efforts by Charles Baril, who spent many months
+inside the nacelle; cleaning, inspecting and masking off for painting.
+The work took so long that special heating ducts and insulation needed
+to be positioned around the nacelle to keep it warm enough for Réjean
+Demers and Bruce Gemmill to apply a coat of primer and silver paint.
+(insert photo of North Star with orange tarp). Soon after the paint was
+applied, the North Star was moved inside for the winter. This occurred
+November 8th, just 3 days before our first snow storm of the winter.
 
-Inorganic compounds risk distraction. Focus is important when avoiding the
-ethereal draw of solvents. A volunteer scrubber, washing away years of residue,
-layered upon a finish that once gleamed with pride. Slowing the return to dust,
-so feared and fought by the living. A process to follow and adhere to. The
-methodical dismantling and reconstruction of an object. Return to form, that
-which was almost indiscernible. The result of all his work is not merely a
-shiny piece of aluminium panelling; He has travelled through time.
+While all that work was underway, the Airframe Crew was busy on the
+structures work.  Peter Trobridge, Michel Cote and Robert Desjardins
+fabricated and installed several replacement parts for main cabin
+airframe assemblies that had suffered from years of corrosion.  The
+crew accomplished a complete review of necessary repairs from front to
+back of the main cabin. A hole was patched near the door to the crew
+area, at forward bulkhead (station) 301. This offered Chris McGuffin an
+intro to sheet metal repairs. Similar corrosion damage around the
+windows required parts shaped on wooden jigs made in the shop. Through
+careful planning and creative solutions, repairs were completed at STA:
+360, and 381. New repairs carried out at starboard STA: 460, 480, 501,
+541, 560, 621 and currently, floor repairs in the loading area near the
+cargo doors.
 
-More than just an object, we look to a hidden past. Beyond these material
-trappings, lay the history of Canadair North Star 17515 and her sisters.
-Examples of service are easily found in books and photos. What proves a
-challenge is explaining how a bumblebee becomes a preserved specimen in an
-engine, how graffiti made during heavy maintenance is the only evidence of a
-man's past. Where the dirt under floorboards, came from countries that no
-longer bear the name she visited.
+The Carpentry Crew, led by Chris McGuffin measured, cut and trimmed new
+plywood panels for the interior walls of the main cabin.  These were
+painted green to match the original colour scheme, then set aside until
+for later installation.  Next came the floor panels.  Richard Houle and
+John Makadi assessed these, according to the amount of damage caused by
+wear and tear, as well as leaks around windows and doors.  Some panels
+were salvaged with a few minor repairs, then painted. These are now
+ready for installation.  Several others were so badly damaged that
+completely new panels needed to be made. (Photo of wall and floor
+panel)
 
-The static, prevents complete appreciation. She's more than 45,000 lbs. of
-metal. Superficial understanding can only consider her 39 years an outdoor
-relic. Likewise, so would a skin deep treatment of a last remaining artefact of
-this type. What impact she had before the stillness of the seasons is not lost
-to those who look further.
+Finally, work started on the third group of panels.  These floor panels
+had significant damage to one or two edges.  The damaged areas need to
+be cut away and a new piece added by bevelling the adjoining pieces
+using what is called a "scarf joint" so the adhesive bond is strong.  A
+special jig was constructed to do this work, allowing an electric
+router to run at an angle to produce the joint. A Resorcinol
+Formaldehyde adhesive will assure a long-lasting repair.
 
-A biological experience in personal evolution. The volunteer has developed new
-muscles and sinew adapted to producing polished surfaces. An eye for
-microtexture and grain direction has developed. Sympathetic scars are
-accumulated through careful little sacrifices. Navigating the disruptions of
-capricious human needs such as rest, nourishment and leisure. Through the
-application of labour, a piece of history is preserved.
+Many of the volunteers got to work on the large collection of
+accessories that had been removed from nacelle \#4.  This included
+pumps, plumbing, fluid and air lines, control cables, bell cranks and
+pulleys, electrical harnesses, valves and filter canisters. Each needed
+assessment, cleaning, repair, polishing or painting as well as
+documentation and photographs of the work undertaken. (photo of fuel
+filter, junction box).
 
-Disappearing horizons. Meditative expanses of aluminum, exhibiting varieties of
-corrosion rarely encountered in a lifetime's career. Cavernous interior spaces,
-where cargo of all sorts was bound for ports beyond. Flight control surfaces
-that have pressed through all shades of dusk, emerging in the dawn of a new
-day. Now removed from the ship, these weathered, beaten, bruised remnants of a
-glorious past await restoration. A new horizon forms, some many years away,
-known to those who are on-board for the long run.
+Phil Chrysler and Brian Cole went to work on the many fairings and
+access panels that also required cleaning and polishing to be ready to
+be placed back on the aircraft. A special mention here for Ted Devey,
+who, before retiring from the shop had his hand on a few cowl panels
+and nacelle components.
 
-Healthy obsessions. Volunteer restoration technicians take home an experience.
-They take to heart the results of their labour, in forming a product that is
-also intangible. The mind has strengthened, forming resolves that assist,
-understand and process the elements of restoration work. As historians,
-fanatics and unwitting library wanderers soon discover; The story of air
-transport, in its beginning, is far from just a few obscure paragraphs in
-Canada's ongoing history. It lives through those people who continue writing
-it, preserving the physical, extending beyond.
+Several special projects were also undertaken during the year.  John
+Makadi removed the nose radome to determine what radar equipment had
+been removed, in case we are able to find a source for missing
+equipment.  We removed the upper rotating navigation beacon to fix a
+persistent leak, this necessitated a twin tower scaffold assembly to
+safely reach the top of the fuselage. Neil Raynor and Will Assad
+overhauled a propeller stand the Museum had not used for many years. 
+It got a fresh coat of paint and new wheels and tires, and is now
+holding two North Star propellers, until they can be installed on the
+appropriate engine. (photo of prop stand, two propellers). Michael Hope
+assisted in removal of Prop. \#1 and assembly of soon-to-be-installed
+Prop. \#4. Phil Chrysler and Brian Cole fabricated cables and special
+fittings to secure the landing gear so the aircraft could be safely
+displayed. Other duties  such as; an inventory of replaced / restored
+and spare components were carried out.  All of these were packed and
+stored in a new location of the Reserve Hangar.
 
+Number \#4 engine has now  been moved to the Reserve Hangar. The crew
+are prepping the oil tank for clear coat then it will be assembled and
+ready to install. Once this is completed  the plan is to carry out some
+deep cleaning and renovations in the shop starting  by  relocating the
+varsol cleaning tank. The paint shaker has been repaired and the base
+has been painted ready for assembly. The paint shaker will be relocated
+where the varsol tank was. The old roll away tool box has been replaced
+by a new Snap-On unit. There have been lots of comments on the orange
+colour  but the price was right.
+
+Currently, work is on-going to complete the rear (main) cargo door and
+quilted liner installation. Nacelle \#4 installation of restored
+components is advancing in small steps, due to the complexity of
+interrelated systems and locations. Scaffolding is in place, over the
+forward fuselage area above the cockpit to assess air-frame
+requirements and treatment methods to be used on exterior hull
+surfaces. Restoration records are also being reviewed by Conservation
+Special Project Manager Réjean Demers. The Work Order / Task Card
+format is lending well to Museum information uploading tools. Efforts
+are underway to recruit two to four new shop volunteers, and R\'{e}j
+invites any new applicants referred by PNSAC to apply.
 
 \begin{footnotesize}
   \raggedleft PNSAC\\
