--- a/pnsac/newsletter/main_document.tex
+++ b/pnsac/newsletter/main_document.tex
@@ -49,13 +49,13 @@
 
 \begin{document}
 
-\volume{15} % \volnumber{1}
+\volume{16} % \volnumber{1}
 \issue{1}
-\date{January 2019} 
+\date{March 2020} 
 \titlepage
 
-\centerline {\Large \textit {Celebrating the 70th Anniversary of the First
-Canadian Non-Stop Transcontinental Flight}}
+%\centerline {\Large \textit {Celebrating the 70th Anniversary of the First
+%Canadian Non-Stop Transcontinental Flight}}
 
 % Editor's notes
 % ..................................................... %
@@ -63,15 +63,6 @@ Canadian Non-Stop Transcontinental Flight}}
 % Editor's notes
 \begin{article}
 	\input{article_EditorsNotes} 
-\end{article}
-
-\pagebreak
-
-% 70th anniversary report .................................................... %
-
-% Report
-\begin{article}
-	\input{article_Special} 
 \end{article}
 
 \pagebreak
@@ -112,19 +103,19 @@ Canadian Non-Stop Transcontinental Flight}}
 	\input{article_Feature1} 
 \end{article}
 
-%\pagebreak
+\pagebreak
 
 % Feature article
-%\begin{article}                 
-%	\input{article_Feature2} 
-%\end{article}
+\begin{article}                 
+	\input{article_Feature2} 
+\end{article}
 
-%\pagebreak
+\pagebreak
 
 % Feature article
-%\begin{article}
-%	\input{article_Feature3} 
-%\end{article}
+\begin{article}
+	\input{article_Feature3} 
+\end{article}
 
 %\pagebreak
 
